[gd_scene load_steps=8 format=2]

[ext_resource path="res://actors/player/PlayerFlyingCleaverHit.tres" type="Resource" id=1]
[ext_resource path="res://actors/combat/HitBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://actors/player/buccerino/cleaver.png" type="Texture" id=3]
[ext_resource path="res://actors/player/buccerino/FlyingCleaver.gd" type="Script" id=4]

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 1, 1, 1, 0.113725, 1, 1, 1, 0 )

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[sub_resource type="Animation" id=2]
resource_name = "fly"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="FlyingCleaver" type="Node2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Trail" type="CPUParticles2D" parent="Sprite"]
show_behind_parent = true
amount = 32
local_coords = false
texture = ExtResource( 3 )
flag_align_y = true
gravity = Vector2( 0, 0 )
color_ramp = SubResource( 3 )

[node name="HitBox" parent="." instance=ExtResource( 2 )]
hit = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fly"
playback_speed = 2.0
anims/fly = SubResource( 2 )

[node name="Duration" type="Timer" parent="."]
one_shot = true

[node name="ReturnDuration" type="Timer" parent="."]
[connection signal="timeout" from="Duration" to="." method="_on_Duration_timeout"]
[connection signal="timeout" from="ReturnDuration" to="." method="_on_ReturnDuration_timeout"]
